--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "saji",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "gulp": "^3.9.1",
+    "jest-cli": "^16.0.2",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
