--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browserify": "^13.1.1",
     "gulp": "^3.9.1",
     "jest-cli": "^16.0.2",
+    "react-addons-test-utils": "^15.3.2",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
