--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "saji",
   "license": "ISC",
   "devDependencies": {
+    "babel-jest": "^16.0.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "gulp": "^3.9.1",
@@ -20,5 +21,15 @@
     "react": "^0.14.0-beta3",
     "react-dom": "^0.14.0-beta3",
     "snapkite-stream-client": "^1.0.3"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "testFileExtensions": [
+      "es6",
+      "js"
+    ],
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react"
+    ]
   }
 }
