--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "flux": "^3.1.0",
+    "object-assign": "^4.1.0",
     "react": "^0.14.0-beta3",
     "react-dom": "^0.14.0-beta3",
     "snapkite-stream-client": "^1.0.3"
